- Fixed problem where box-shadow was not showing on iOS devices.
- Signed off by Jon Totton

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/Toolbar.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/Toolbar.css
@@ -2,88 +2,97 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height:38px;
+  height: 38px;
   overflow: hidden;
-
   background: #527db4; /* Old browsers */
-  background: -moz-linear-gradient(top,  #527db4 0%, #526ea2 100%); /* FF3.6+ */
+  background: -moz-linear-gradient(top, #527db4 0%, #526ea2 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#527db4), color-stop(100%,#526ea2)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #527db4 0%,#526ea2 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #527db4 0%,#526ea2 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #527db4 0%,#526ea2 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #527db4 0%,#526ea2 100%); /* W3C */
+  background: -webkit-linear-gradient(top, #527db4 0%,#526ea2 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #527db4 0%,#526ea2 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #527db4 0%,#526ea2 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #527db4 0%,#526ea2 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#527db4', endColorstr='#526ea2',GradientType=0 ); /* IE6-9 */
 }
+
 .fr-toolbar-slide {
   margin: 0px;
   padding: 0px;
   width: 100%;
-  height:38px;
-
+  height: 38px;
   background: #4971a5; /* Old browsers */
-  background: -moz-linear-gradient(top,  #4971a5 0%, #2f4a7d 100%); /* FF3.6+ */
+  background: -moz-linear-gradient(top, #4971a5 0%, #2f4a7d 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4971a5), color-stop(100%,#2f4a7d)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #4971a5 0%,#2f4a7d 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #4971a5 0%,#2f4a7d 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #4971a5 0%,#2f4a7d 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #4971a5 0%,#2f4a7d 100%); /* W3C */
+  background: -webkit-linear-gradient(top, #4971a5 0%,#2f4a7d 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #4971a5 0%,#2f4a7d 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #4971a5 0%,#2f4a7d 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #4971a5 0%,#2f4a7d 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4971a5', endColorstr='#2f4a7d',GradientType=0 ); /* IE6-9 */
 }
+
 .fr-toolbar input[type=number]::-webkit-inner-spin-button,
 .fr-toolbar input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 .fr-toolbar input {
   font-size: 13pt;
   color: #666666;
   height: 22px;
   background-color: white;
   border: 1px solid #424242;
+  -webkit-appearance: none;
   box-shadow: 0px 0px 7px #545454 inset;
 }
+
 .fr-toolbar-reportpage-textbox {
   width: 32px;
-  text-align:right;
+  text-align: right;
   padding-right: 4px;
 }
+
 .fr-toolbar-keyword-textbox {
   width: 94px;
   padding-left: 4px;
   padding-right: 20px;
 }
+
 .fr-toolbar-pageOf-button {
   width: 15px;
-  color:white;
-  line-height:36px;
-  text-align:center;    
+  color: white;
+  line-height: 36px;
+  text-align: center;
 }
+
 .fr-toolbar-numPages-button {
-  min-width:10mm;
-  max-width:15mm;
+  min-width: 10mm;
+  max-width: 15mm;
   padding-left: 4px;
-  color:white;
-  line-height:36px;
+  color: white;
+  line-height: 36px;
 }
-.fr-toolbar-sparator-text
-{
-  color:white;
-  line-height:36px;
-  text-align:center;
+
+.fr-toolbar-sparator-text {
+  color: white;
+  line-height: 36px;
+  text-align: center;
 }
+
 .fr-toolbar-find-button {
   position: absolute;
   right: 4px;
   top: 4px;
 }
+
 .fr-toolbar-search-icon {
   height: 16px;
   width: 16px;
   background-image: url(../Images/search.png);
   background-repeat: no-repeat;
 }
+
 .fr-button-favorite, .fr-button-recent, .fr-button-home, .fr-toolbar-paramarea-button {
-    float:right;
+  float: right;
 }
 
 /* The following toolbar sizes will be supported and are device agnostic */
@@ -93,8 +102,9 @@
   .fr-toolbar .fr-toolbar-hidden-on-small {
     display: none;
   }
+
   .fr-toolbar .fr-toolbar-reportpage-textbox {
-    margin-left:45px;
+    margin-left: 45px;
   }
 }
 
